Disregard portnumbers in redirect URIs